--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "db:seed": "node scripts/seed.js"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "next": "^14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
